--- a/simple-docker-fullstack-app/server/Dockerfile
+++ b/simple-docker-fullstack-app/server/Dockerfile
@@ -2,6 +2,7 @@ FROM node:14
 WORKDIR /usr/src/app
 COPY package*.json ./
 RUN npm install
-COPY . .
+COPY server/ ./server/
+WORKDIR /usr/src/app/server
 EXPOSE 8000
 CMD [ "node", "index.js" ]
